1999-01-27  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* Sync up with semi-1_13.


1999-01-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en: Notice that 1.12.5 or later of FLIM is required.

1999-01-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-play.el (mime-preview-play-current-entity): Add autoload
	cookie.
	(mime-play-entity): Likewise.

	* mime-view.el (mime-display-message): Add autoload cookie; add
	DOC-string.
	(mime-view-buffer): Add autoload cookie.

1999-01-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-play.el (mime-reduce-acting-situation-examples): New
	implementation.

1999-01-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-play.el (mime-view-caesar): Select window which displays
	current-buffer if it is not selected <to fix problem with mouse
	operations>.

1999-01-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Limit the
	search bound for the end of "Content-Transfer-Encoding" field.

1999-01-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-play.el (mime-view-caesar): New implementation.

1999-01-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-play.el (mime-view-caesar): Don't expect called in
	raw-buffer; use `mime-insert-entity'.

1999-01-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-w3.el (mime-preview-text/html): Display err if error occurs
	in `w3-region'.

	* mime-w3.el (mime-preview-text/html): Guard from error of
	`w3-region'.


1999-01-25  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* Sync up with semi-1_13.


1999-01-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* SEMI: Version 1.13.1 (Kaga-Kasama) released.

1999-01-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* TODO (Don't expect raw-buffer): New item.
	(lazy generating of situations from mime-entity information): New
	item.

	* TODO (Don't use filter-model): finished.

	* TODO (multipart/related support): virtually finished.

1999-01-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
